@@ -29,7 +29,7 @@ XStringListToTextProperty(
     int count,
     XTextProperty *text_prop_return)
 {
-    return (Status) NULL;
+    return (Status) 0;
 }
 
 /*
@@ -148,7 +148,7 @@ XGetWMColormapWindows(
     Window **windows_return,
     int *count_return)
 {
-    return (Status) NULL;
+    return (Status) 0;
 }
 
 int
